added a config.js file to LWC

--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,9 @@ $RECYCLE.BIN/
 
 # Local environment variables
 .env
-
+config.js
 # Python Salesforce Functions
 **/__pycache__/
 **/.venv/
 **/venv/
+
